sass/login/vtex.login.scss
@import '../_media-queries.scss';
.content {
  margin-top: 10px;
  justify-content: center;
  max-width: 1440px;
  width: auto;

  &--emailAndPassword,
  &--emailVerification {
    flex-direction: row-reverse;
    @include breakpoint("mobile"){
        display: block;
      }
  }

  .loginOptionsContainer,
  .contentForm {
    padding: 24px 60px;
  }

  .loginOptionsContainer {
    min-height: 240px !important;
    max-width: 427px;
    border-radius: 4px;
    background-color: #F4F7FA;
    // @include breakpoint("mobile"){
    //     width: ;
    //   }
    .optionsSticky {
        .formTitle {
            // text-align: left;
            // padding: 0;
            // margin: 0 0 32px;
            // font-style: normal;
            // font-weight: 300;
            // font-size: 0;
            // line-height: 100%;
            // align-items: center;
            // color: #111;
            display: flex;
            align-items: center;
            justify-content: center;
            @include breakpoint("mobile"){
                transform: translateX(-50px);
            }
            &::after {
                content: "Non hai ancora un account?";
                    height: 24px;
                    width: 250px;
                    color: #332C32;
                    font-family: Roboto;
                    font-size: 20px;
                    font-weight: 500;
                    letter-spacing: 0;
                    line-height: 24px;
                  
            }
        }

        .optionsList {
            margin: 0;

            .optionsListItem {
                :global(.vtex-button) {
                    border-radius: 8px;
                    font-style: normal;
                    font-weight: 500;
                    font-size: 14px;
                    width: 280px;
                    height: 48px;
                    text-transform: initial;
                    transition: .2s ease-in-out;

                    :global(.vtex-button__label) {
                        width: 280px;
                    }
                }

                .emailPasswordOptionBtn,
                .accessCodeOptionBtn {

                    &::after{
                         content: "Maecenas efficitur feugiat orci, sit amet ullamcorper leo. Sed sit amet felis id ex ornare dignissim faucibus sed mi.";
                         height: 60px;
                         width: 360px;
                         color: #332C32;
                         font-family: Roboto;
                         font-size: 16px;
                         letter-spacing: 0;
                         line-height: 20px;
                         position: absolute;
                         transform: translateY(-8px);
                         @include breakpoint("mobile"){
                            transform: translateX(-232px);
                         }
                    }
                    :global(.vtex-button) {
                        display: none;
                    }
                }
            }
        }
    }
  }

  .contentForm {

      .emailVerification {
          .formTitle {
              display: flex;
              flex-direction: column;
              font-size: 0;
              text-align: left;
              font-style: normal;
              font-weight: 300;
              color: #111;
              padding: 0;
              margin-bottom: 32px;
              &::before {
                  content: "Ricevi il codice di accesso via email";
                  font-size: 28px !important;
                  font-weight: 700;
                  text-align: center;
              }
              &::after {
                content: "";
                font-size: 0;
              }
          }
          .inputContainerPassword {
              :global(.vtex-styleguide-9-x-input) {
                  padding-right: 50px;
              }

              :global(.vtex-input__suffix) {
                  padding: 0;

                  .eyeIcon--invisible,
                  .eyeIcon--visible {
                      position: absolute;
                      right: 20px;
                  }
              }
          }

          .formFooter {
              :global(.t-small) {
                  font-size: 0;

                  &::after {
                      content: "ACCEDI";
                      font-size: 16px !important;
                  }
              }
          }
          &.emailAndPasswordForm {
              .formTitle {
                  font-size: 24px;
                  font-weight: 700;
                  text-align: center;
                  &::before {
                      content: "";
                  }
              }
          }
      }

      .inputContainer {
          :global(.vtex-input-prefix__group) {
              border: none;
              width: 280px !important;
              height: 48px !important;

              :global(.vtex-styleguide-9-x-input) {
                  background: #FFF;
                  border: 1px solid #CCC;
                  box-sizing: border-box;
                  border-radius: 3px;
                  width: 280px;
                  height: 48px;
              }
          }
      }

      .codeConfirmation {
          .formFooter {
              .sendButton {
                  :global(.t-small) {
                      font-size: 0;
  
                      &::after {
                          content: "Entrar";
                          font-size: 16px !important;
                      }
                  }
              }
          }
      }

      .formFooter {
          text-align: center;
          margin-top: 16px;
          padding: 0;
          border: none;
          width: 280px;

          .sendButton {
              min-width: 131px;

              :global(.vtex-button) {
                border-radius: 2px;
                background-color: #291660;
                  border: none;
                  width: 100%;
                  height: 48px;
                  border-radius: 8px;
                  font-style: normal;
                  font-weight: 500;
                  font-size: 14px;
                  text-transform: initial;
                  transition: .2s ease-in-out;
  
                  &:hover {
                      background: #1B0E41;
                  }
              }
          }

          .backButton {
              :global(.vtex-button) {
                  color: #8E8E8E;
                  font-style: normal;
                  font-weight: 600;
                  font-size: 14px;
  
                  &:hover {
                      color: #1B0E41;
                      background: #fff;
                  }

                  :global(.vtex-button__label) {
                      padding: 0 !important;
                  }
              }
          }
      }

      .dontHaveAccount {
        font-size: 18px;
        color: white;
        background: antiquewhite;
        padding: 18px;
        position: absolute;
        top: 170px;
        right: 294px;
        box-sizing: border-box;
        height: 40px;
        width: 360px;
        border: 1.5px solid #291660;
        border-radius: 2px;
        background-color: #FFFFFF;

        &::after{
            content: "registrati";
                height: 16px;
                width: 78px;
                color: #291660;
                font-family: Roboto;
                font-size: 14px;
                font-weight: 500;
                letter-spacing: 0;
                line-height: 16px;
                text-align: center;
                position: absolute;
                bottom: 10px;
                left: 144px;
                text-transform: uppercase;

                @include breakpoint("mobile"){
                    transform: translateX(-48px);
                }
        }
        &:hover{
            background-color: white;
            opacity: inherit !important;
            border: 1.5px solid #1B0E41;
            border-radius: 2px;
            background-color: #FFFFFF;
           
        }
        @include breakpoint("mobile"){
            width: 292px;
            transform: translateX(260px);
          }
      }

  }


}

.content--beginCreatePass {
  .emailPasswordOptionBtn,
  .loginOptionsContainer {
      display: none;
  }

  .backButton {
      :global(.t-small) {
          font-size: 16px !important;

          &::after {
              content: none !important;
          }
      }
  }
}

.content--codeConfirmation {
  .formTitle {
      display: flex;
      flex-direction: column;
      font-size: 0;
      text-align: left;
      font-style: normal;
      font-weight: 300;
      color: #111;
      padding: 0;
      margin-bottom: 59px;
      width: 222px;
      height: 6px;

      &::after {
          content: "Digite o código de acesso enviado para o seu e-mail:";
          font-size: 18px !important;
      }
  }

  .accessCodeOptionBtn {
      display: none;
  }
}

.facebookOptionBtn {
  :global(.vtex-button) {
      background: #3578EA;
      border: 2px solid #3578EA;

      &:hover {
          background: #fff;

          :global(.vtex-button__label) {

              svg {
                  width: 20px !important;
              }

              &::before {
                  content: none !important;
              }

              .oauthLabel::before {
                  color: #3578EA !important;
              }
          }
      }

      :global(.vtex-button__label) {
          svg {
              width: 0;
          }

          &::before {
              content: url(/arquivos/facebook-icon.png);
              width: 20px;
              height: 20px;
          }

          .oauthLabel {
              font-size: 0;

              &::before {
                  content: "Faça login com Facebook";
                  font-style: normal;
                  font-weight: 500;
                  font-size: 14px !important;
                  line-height: 100%;
                  text-align: center;
                  color: #FFF;
                  text-transform: initial;

              }
          }
      }
  }
}

.googleOptionBtn {
  :global(.vtex-button) {
      border: 2px solid #E30613;

      &:hover {
          background: #E30613;
          
          :global(.vtex-button__label) {
              .oauthLabel::before {
                  color: #fff !important;
              }
          }
      }

      :global(.vtex-button__label) {
          .oauthLabel {
              font-size: 0;

              &::before {
                  content: "Faça login com Google";
                  font-style: normal;
                  font-weight: 500;
                  font-size: 14px !important;
                  line-height: 100%;
                  text-align: center;
                  color: #111;
                  text-transform: initial;

              }
          }
      }
  }
}

@media screen and (max-width: 48rem) {
  .loginOptionsContainer {
      padding: 24px 0;
      text-align: center;
      border: none;

      .formTitle {
          text-align: center !important;
      }
  }
}

.arrowUp {
  margin-right: 1.5rem;
}

//login account 

// .formLinkContainer{
//     position: absolute;
//     top: 10px;
//     right: 246px;
//     width: 427px;
//     height: 240px;
//     background: #F4F7FA;

//     .dontHaveAccount{
//         width: 240px;
//         color: white;
//         height: 40px;
//         margin-top: 169px;
//         background: white;
//         &::after{
//            content: "registrati";
//            text-transform: uppercase;
//            color: #291660;
//            font-family: Roboto;
//            font-size: 14px;
//            font-weight: 500;
//            letter-spacing: 0;
//            line-height: 16px;
//            text-align: center;
//            position: absolute;
//            transform: translatey(-5px);
//         }
//     }
// }

